--- a/custom-solution/implementation/package.json
+++ b/custom-solution/implementation/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config ./config/webpack/dev.js",
     "clean": "rimraf dist",
     "build": "npm run clean && webpack --config ./config/webpack/prod.js",
-    "test": "jest --verbose",
+    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --verbose",
     "test:watch": "jest --verbose --watchAll -i"
   },
   "repository": {
@@ -28,6 +28,8 @@
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
     "awesome-typescript-loader": "^5.2.1",
+    "cross-env": "^5.2.0",
+    "full-icu": "^1.3.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.1",
